Tidied up the dynamic toolbaritem handling.

--- a/src/chrome/content/bindings.css
+++ b/src/chrome/content/bindings.css
@@ -1,3 +1,7 @@
-.thinger-bookmark {
+.thinger-item[thingtype="bookmark"] {
   -moz-binding: url('chrome://thinger/content/thing.xml#bookmark');
+}
+
+.thinger-item[thingtype="script"] {
+  -moz-binding: url('chrome://thinger/content/thing.xml#script');
 }
