Allows a special initialisation for design mode. New base binding for items that only have a button and want the button name and icon retained in design mode.

--- a/src/chrome/content/bindings.css
+++ b/src/chrome/content/bindings.css
@@ -1,7 +1,7 @@
-.thinger-item[thingtype="bookmark"] {
+toolbar .thinger-item[thingtype="bookmark"] {
   -moz-binding: url('chrome://thinger/content/thing.xml#bookmark');
 }
 
-.thinger-item[thingtype="script"] {
+toolbar .thinger-item[thingtype="script"] {
   -moz-binding: url('chrome://thinger/content/thing.xml#script');
 }
