--- a/src/chrome/content/customizeBindings.css
+++ b/src/chrome/content/customizeBindings.css
@@ -1,3 +1,7 @@
-.thinger-item {
-  -moz-binding: url('chrome://thinger/content/thing.xml#thing');
+.thinger-item[thingtype="bookmark"] {
+  -moz-binding: url('chrome://thinger/content/thing.xml#bookmark');
+}
+
+.thinger-item[thingtype="script"] {
+  -moz-binding: url('chrome://thinger/content/thing.xml#script');
 }
