--- a/src/chrome/content/bindings/customizeBindings.css
+++ b/src/chrome/content/bindings/customizeBindings.css
@@ -1,11 +1,3 @@
-.thinger-item[thingtype="bookmark"] {
-  -moz-binding: url('chrome://thinger/content/bookmark/bookmark.xml#bookmark');
-}
-
-.thinger-item[thingtype="bookmarkToolbar"] {
-  -moz-binding: url('chrome://thinger/content/bookmark/toolbar.xml#toolbar');
-}
-
-.thinger-item[thingtype="script"] {
-  -moz-binding: url('chrome://thinger/content/script/script.xml#script');
+.thinger-item {
+  -moz-binding: url('chrome://thinger/content/bindings/thing.xml#button-thing');
 }
