Updates to keep in sync with current places work.

--- a/src/chrome/skin/thinger.css
+++ b/src/chrome/skin/thinger.css
@@ -1,3 +1,16 @@
 .thinger-customise {
   list-style-image: url('chrome://thinger/skin/options.png');
 }
+
+.thinger-item[thingtype="bookmark-item"] {
+}
+
+.thinger-item[thingtype="bookmark-toolbar"] {
+}
+
+.thinger-item[thingtype="search"] {
+  list-style-image: url('chrome://thinger/skin/search.png');
+}
+
+toolbar .thinger-item[thingtype="script"] {
+}
