Initial localisation and a better delete prompt.

--- a/src/chrome/skin/thinger.css
+++ b/src/chrome/skin/thinger.css
@@ -3,6 +3,7 @@
 }
 
 .thinger-item[thingtype="bookmark-item"] {
+  list-style-image: url('chrome://thinger/skin/bookmark.png');
 }
 
 .thinger-item[thingtype="bookmark-toolbar"] {
