Icons for remaining things. Search thing retains its icon and name in the palette. Script can have a custom icon and title.

--- a/src/chrome/content/bindings/bindings.css
+++ b/src/chrome/content/bindings/bindings.css
@@ -23,6 +23,11 @@ toolbar .thinger-item[thingtype="script"] {
   -moz-binding: url('chrome://thinger/content/script/script.xml#script');
 }
 
+toolbar .thinger-item[thingtype="script"] .toolbarbutton-icon {
+  width: 16px;
+  height: 16px;
+}
+
 .thinger-customise {
   -moz-binding: url("chrome://thinger/content/bindings/thing.xml#customise");
 }
