Change bindings to allow for Firefox 2 and Firefox 3 code. Implement basic bookmark and bookmark toolbar for Firefox 2.

--- a/src/chrome/skin/thinger.css
+++ b/src/chrome/skin/thinger.css
@@ -17,3 +17,11 @@
 .thinger-item[thingtype="script"] {
   list-style-image: url('chrome://thinger/skin/script.png');
 }
+
+.thinger-searchbar[empty="true"] .searchbar-textbox {
+  color: graytext;
+}
+
+.thinger-item[thingtype="bookmark-toolbar"] .bookmarks-toolbar-customize {
+  list-style-image: url('chrome://thinger/skin/toolbar.png') !important;
+}
